# proof-of-audit

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini
.claude/: settings.json
.githooks/: pre-commit
.github/: pull_request_template.md
api/: Dockerfile  requirements.txt
contracts/: foundry.toml
demo/: agents.json  agents.schema.json  fixtures.catalog.json
deployments/: base-sepolia.json  demo-fixtures.base-sepolia.json
docs/: AGENT_API.md  AGENT_FORGE_OPERATIONS.md  AGENT_FORGE_SERVICE_CONTRACT.md  AGENT_FORGE_SERVICE_INTEGRATION.md  AGENT_FORGE_SERVICE_OPENAPI.yaml  AGENT_INTERACTION_FLOW.md  AGENT_REQUEST_PARTICIPATION.md  ARCHITECTURE.md  ASCIINEMA_DEMO.md  AUDIT_REQUEST_PROTOCOL.md  AUDIT_SNAPSHOT_SEMANTICS.md  CHALLENGER_FEED.md  CHALLENGE_POLICY.md  CHALLENGE_VERIFIER_V2.md  DEMO_NARRATIVE.md  DEMO_SCRIPT.md  DEPLOYED_VERSION.md  DEPLOYMENT.md  ERC8004_ALIGNMENT.md  ERC8004_REGISTRATION.md  ERC8004_ROADMAP.md  EXECUTABLE_EVIDENCE_BUNDLE.md  FORMAL_TESTING.md  JUDGE_BRIEF.md  JUDGE_EVALUATION.md  LOCAL_AGENT_FORGE.md  MARKETPLACE_SETTLEMENT_ACCOUNTING.md  MULTI_AGENT_DEMO.md  PITCH.md  PLUGGABLE_AUDITOR_INTEGRATION.md  RELEASE_NOTES_DRAFT.md  REPUTATION_MODEL.md  ROADMAP.md  SECURITY_AUDIT_WORKFLOW.md  SEQUENCE_DIAGRAM.md  STRATEGIC_ALIGNMENT.md  SUBMISSION_PACK.md  SUBMISSION_UX.md  TECHNICAL_DOCUMENTATION.md  TEE_EVIDENCE_RFC.md  (+1 more)
scripts/: capture-demo-assets.sh  cross_agent_watcher.py  deploy-agent-identity.sh  deploy-base-sepolia-fixtures.sh  deploy-base-sepolia-identity.sh  deploy-base-sepolia.sh  deploy-demo-fixtures.sh  deploy-local.sh  deploy-multi-agent-identities.sh  deploy-release.sh  generate-auditor-catalog.py  install-git-hooks.sh  prepare-agent-demo-stack.sh  record-agent-demo.sh  register-multi-agent-identities.py  run-e2e-stack.sh  run-judge-stack.sh  run-multi-agent-demo.py  run-multi-agent-demo.sh  run-pre-commit-security-audit.sh  run-public-web-smoke.sh  run-system-e2e-stack.sh  (+16 more)
(+178 files in other folders)
