[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proof-of-audit"
version = "0.1.0"
description = "Stake-backed smart contract audit attestations with deterministic agent reports and challenge workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "cloud-sql-python-connector==1.20.1",
  "eth-tester[py-evm]==0.13.0b1",
  "fastapi==0.115.11",
  "google-cloud-storage==2.19.0",
  "httpx==0.28.1",
  "pg8000==1.31.5",
  "uvicorn==0.34.0",
  "web3==7.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
]

[tool.setuptools.packages.find]
where = ["agent", "api"]
include = ["proof_of_audit_agent*", "proof_of_audit_api*"]

[tool.pytest.ini_options]
addopts = "--capture=no"
markers = [
  "system_e2e: boots the real API and chain stack and drives it over HTTP",
  "testnet_smoke: hits a configured deployed API and Base Sepolia RPC for gated smoke coverage",
]
testpaths = [
  "agent/tests",
  "api/tests",
]
